fix(marketPrice) : 상품id 조회 -> 상품이름으로 변경